k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airbnb-system
  labels:
    name: airbnb-system
