k8s/deployment-host-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host-frontend
  namespace: airbnb-system
  labels:
    app: host-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: host-frontend
  template:
    metadata:
      labels:
        app: host-frontend
    spec:
      containers:
      - name: host-frontend
        image: 829108230080.dkr.ecr.us-east-1.amazonaws.com/airbnb/host-frontend:latest
        imagePullPolicy: Always  # Pull from ECR
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
