k8s/service-host-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-backend-service
  namespace: airbnb-system
  labels:
    app: host-backend
spec:
  type: LoadBalancer
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: host-backend
