k8s/service-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: airbnb-system
  labels:
    app: kafka
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    protocol: TCP
    name: client
  selector:
    app: kafka
