k8s/service-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: airbnb-system
  labels:
    app: mongodb
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongodb
  selector:
    app: mongodb
