k8s/service-traveller-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: traveller-backend-service
  namespace: airbnb-system
  labels:
    app: traveller-backend
spec:
  type: LoadBalancer
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: traveller-backend
