k8s/service-traveller-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: traveller-frontend-service
  namespace: airbnb-system
  labels:
    app: traveller-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: traveller-frontend
