k8s/service-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: airbnb-system
  labels:
    app: zookeeper
spec:
  type: ClusterIP
  ports:
  - port: 2181
    targetPort: 2181
    protocol: TCP
    name: client
  selector:
    app: zookeeper
  clusterIP: None
