k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbnb-ingress
  namespace: airbnb-production
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.airbnb.com
    secretName: airbnb-tls
  rules:
  - host: api.airbnb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airbnb-backend-service
            port:
              number: 80
